Ajuste URL QRCODE SC, E correção de Status Serviço MS.

--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -696,7 +696,7 @@ URL-ConsultaNFCe=www.sefaz.rr.gov.br/nfce/consulta
 
 [NFCe_SC_P]
 Usar=NFCe_SVRS_P
-URL-QRCode=https://sat.sef.sc.gov.br/nfce/consulta?p=
+URL-QRCode=https://sat.sef.sc.gov.br/nfce/consulta
 URL-ConsultaNFCe=https://sat.sef.sc.gov.br/nfce/consulta
 
 [NFCe_SC_H]
