--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -701,7 +701,7 @@ URL-ConsultaNFCe=https://sat.sef.sc.gov.br/nfce/consulta
 
 [NFCe_SC_H]
 Usar=NFCe_SVRS_H
-URL-QRCode=https://hom.sat.sef.sc.gov.br/nfce/consulta?p=
+URL-QRCode=https://hom.sat.sef.sc.gov.br/nfce/consulta
 URL-ConsultaNFCe=https://hom.sat.sef.sc.gov.br/nfce/consulta
 
 [NFCe_SE_P]
