--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -506,7 +506,7 @@ NfeConsultaProtocolo_4.00=https://nfce.fazenda.mg.gov.br/nfce/services/NFeConsul
 NfeStatusServico_4.00=https://nfce.fazenda.mg.gov.br/nfce/services/NFeStatusServico4
 NFeAutorizacao_4.00=https://nfce.fazenda.mg.gov.br/nfce/services/NFeAutorizacao4
 NFeRetAutorizacao_4.00=https://nfce.fazenda.mg.gov.br/nfce/services/NFeRetAutorizacao4
-URL-QRCode=https://nfce.fazenda.mg.gov.br/portalnfce/sistema/qrcode.xhtml
+URL-QRCode=https://portalsped.fazenda.mg.gov.br/portalnfce/sistema/qrcode.xhtml
 URL-ConsultaNFCe=http://nfce.fazenda.mg.gov.br/portalnfce
 
 [NFCe_MG_H]
@@ -516,7 +516,7 @@ NfeConsultaProtocolo_4.00=https://hnfce.fazenda.mg.gov.br/nfce/services/NFeConsu
 NfeStatusServico_4.00=https://hnfce.fazenda.mg.gov.br/nfce/services/NFeStatusServico4
 NFeAutorizacao_4.00=https://hnfce.fazenda.mg.gov.br/nfce/services/NFeAutorizacao4
 NFeRetAutorizacao_4.00=https://hnfce.fazenda.mg.gov.br/nfce/services/NFeRetAutorizacao4
-URL-QRCode=https://nfce.fazenda.mg.gov.br/portalnfce/sistema/qrcode.xhtml
+URL-QRCode=https://portalsped.fazenda.mg.gov.br/portalnfce/sistema/qrcode.xhtml
 URL-ConsultaNFCe=http://hnfce.fazenda.mg.gov.br/portalnfce
 
 [NFCe_MS_P]
