- Alterado URL QrCode NFCe MG

--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -358,8 +358,8 @@ NFeDistribuicaoDFe_1.01=https://www1.nfe.fazenda.gov.br/NFeDistribuicaoDFe/NFeDi
 RecepcaoEvento_4.00=https://www.nfe.fazenda.gov.br/NFeRecepcaoEvento4/NFeRecepcaoEvento4.asmx
 
 [NFe_AN_H]
-NFeDistribuicaoDFe_1.01=https://hom.nfe.fazenda.gov.br/NFeDistribuicaoDFe/NFeDistribuicaoDFe.asmx
-RecepcaoEvento_4.00=https://hom.nfe.fazenda.gov.br/NFeRecepcaoEvento4/NFeRecepcaoEvento4.asmx
+NFeDistribuicaoDFe_1.01=https://hom1.nfe.fazenda.gov.br/NFeDistribuicaoDFe/NFeDistribuicaoDFe.asmx
+RecepcaoEvento_4.00=https://hom1.nfe.fazenda.gov.br/NFeRecepcaoEvento4/NFeRecepcaoEvento4.asmx
 
 ;;;;;;;;;;;;;; ENDERECOS DA NFCe ;;;;;;;;;;;;;;;;
 
