Adicionado Ator Interessado

--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,10 @@
                     <artifactId>servlet-api</artifactId>
                     <groupId>javax.servlet</groupId>
                 </exclusion>
+                <exclusion>
+                    <artifactId>commons-fileupload</artifactId>
+                    <groupId>commons-fileupload</groupId>
+                </exclusion>
             </exclusions>
         </dependency>
 
