--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -507,7 +507,7 @@ NfeStatusServico_4.00=https://nfce.fazenda.mg.gov.br/nfce/services/NFeStatusServ
 NFeAutorizacao_4.00=https://nfce.fazenda.mg.gov.br/nfce/services/NFeAutorizacao4
 NFeRetAutorizacao_4.00=https://nfce.fazenda.mg.gov.br/nfce/services/NFeRetAutorizacao4
 URL-QRCode=https://portalsped.fazenda.mg.gov.br/portalnfce/sistema/qrcode.xhtml
-URL-ConsultaNFCe=http://nfce.fazenda.mg.gov.br/portalnfce
+URL-ConsultaNFCe=https://portalsped.fazenda.mg.gov.br/portalnfce
 
 [NFCe_MG_H]
 RecepcaoEvento_4.00=https://hnfce.fazenda.mg.gov.br/nfce/services/NFeRecepcaoEvento4
