--- a/pom.xml
+++ b/pom.xml
@@ -217,6 +217,11 @@
                         </goals>
                     </execution>
                 </executions>
+                
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+                
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
