Mudancas SVC-AN

--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -94,7 +94,7 @@ NFeAutorizacao_4.00=https://homolog.sefaz.go.gov.br/nfe/services/NFeAutorizacao4
 NFeRetAutorizacao_4.00=https://homolog.sefaz.go.gov.br/nfe/services/NFeRetAutorizacao4?wsdl
 
 [NFe_MA_P]
-Usar=NFe_SVAN_P
+Usar=NFe_SVC-AN_P
 NfeConsultaCadastro_4.00=https://sistemas.sefaz.ma.gov.br/wscadastro/CadConsultaCadastro2?wsdl
 
 [NFe_MA_H]
@@ -323,12 +323,12 @@ NFeRetAutorizacao_4.00=https://nfe-homologacao.svrs.rs.gov.br/ws/NfeRetAutorizac
 NfeConsultaCadastro_4.00=https://cad-homologacao.svrs.rs.gov.br/ws/cadconsultacadastro/cadconsultacadastro4.asmx
 
 [NFe_SVC-AN_P]
-NfeConsultaProtocolo_4.00=https://www.svc.fazenda.gov.br/NFeConsultaProtocolo4/NFeConsultaProtocolo4.asmx
-NfeStatusServico_4.00=https://www.svc.fazenda.gov.br/NFeStatusServico4/NFeStatusServico4.asmx
-RecepcaoEvento_4.00=https://www.svc.fazenda.gov.br/NFeRecepcaoEvento4/NFeRecepcaoEvento4.asmx
-NFeAutorizacao_4.00=https://www.svc.fazenda.gov.br/NFeAutorizacao4/NFeAutorizacao4.asmx
-NFeRetAutorizacao_4.00=https://www.svc.fazenda.gov.br/NFeRetAutorizacao4/NFeRetAutorizacao4.asmx
-
+NfeInutilizacao_4.00=https://www.sefazvirtual.fazenda.gov.br/NFeInutilizacao4/NFeInutilizacao4.asmx
+NfeConsultaProtocolo_4.00=https://www.sefazvirtual.fazenda.gov.br/NFeConsultaProtocolo4/NFeConsultaProtocolo4.asmx
+NfeStatusServico_4.00=https://www.sefazvirtual.fazenda.gov.br/NFeStatusServico4/NFeStatusServico4.asmx
+RecepcaoEvento_4.00=https://www.sefazvirtual.fazenda.gov.br/NFeRecepcaoEvento4/NFeRecepcaoEvento4.asmx
+NFeAutorizacao_4.00=https://www.sefazvirtual.fazenda.gov.br/NFeAutorizacao4/NFeAutorizacao4.asmx
+NFeRetAutorizacao_4.00=https://www.sefazvirtual.fazenda.gov.br/NFeRetAutorizacao4/NFeRetAutorizacao4.asmx
 
 [NFe_SVC-AN_H]
 NfeInutilizacao_4.00=https://hom.sefazvirtual.fazenda.gov.br/NFeInutilizacao4/NFeInutilizacao4.asmx
