--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,3 @@
-
 name: Liberar nova versão
 
 on:
@@ -10,38 +9,45 @@ on:
 jobs:
 
   package:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-24.04
     name: Empacotar executavel
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-java@v2
+
+      - uses: actions/setup-java@v3
         with:
           java-version: '8'
-          distribution: 'adopt'
-          cache: maven
-      - name: Cache local Maven repository
+          distribution: 'temurin'
+
+      - name: Cache Maven repository
         uses: actions/cache@v3
         with:
           path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          key: maven-${{ runner.os }}-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
-            ${{ runner.os }}-maven-
+            maven-${{ runner.os }}-
+
       - name: Ajustando Timezone
         uses: szenius/set-timezone@v1.0
         with:
           timezoneLinux: "America/Sao_Paulo"
           timezoneMacos: "America/Sao_Paulo"
           timezoneWindows: "America/Sao_Paulo"
+
       - name: Criando executavel
         run: |
-          mvn versions:set -DnewVersion=${{github.ref_name}}
+          mvn versions:set -DnewVersion=${{ github.ref_name }}
           mvn -B package -Passembly --file pom.xml
 
       - name: Criando pasta para Zip
-        run: mkdir java-nfe && cp target/java-nfe-${{github.ref_name}}.jar java-nfe && cp schemas.zip java-nfe
+        run: |
+          mkdir java-nfe
+          cp target/java-nfe-${{ github.ref_name }}.jar java-nfe
+          cp schemas.zip java-nfe
+
       - uses: montudor/action-zip@v1
         with:
-          args: zip -qq -r java-nfe-${{github.ref_name}}.zip java-nfe
+          args: zip -qq -r java-nfe-${{ github.ref_name }}.zip java-nfe
 
       - name: Criando release
         uses: actions/create-release@v1
@@ -49,17 +55,18 @@ jobs:
         with:
           draft: false
           prerelease: false
-          release_name: ${{ steps.version.outputs.version }}
+          release_name: ${{ github.ref_name }}
           tag_name: ${{ github.ref }}
           body_path: CHANGELOG.md
         env:
-          GITHUB_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Subir executavel (zip) para release
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./java-nfe-${{github.ref_name}}.zip
-          asset_name: java-nfe-${{github.ref_name}}.zip
+          asset_path: ./java-nfe-${{ github.ref_name }}.zip
+          asset_name: java-nfe-${{ github.ref_name }}.zip
           asset_content_type: application/zip
