Atualizado URL COnsulta Cadastro RS

--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -235,7 +235,7 @@ NfeStatusServico_4.00=https://nfe.sefazrs.rs.gov.br/ws/NfeStatusServico/NfeStatu
 RecepcaoEvento_4.00=https://nfe.sefazrs.rs.gov.br/ws/recepcaoevento/recepcaoevento4.asmx
 NFeAutorizacao_4.00=https://nfe.sefazrs.rs.gov.br/ws/NfeAutorizacao/NFeAutorizacao4.asmx
 NFeRetAutorizacao_4.00=https://nfe.sefazrs.rs.gov.br/ws/NfeRetAutorizacao/NFeRetAutorizacao4.asmx
-NfeConsultaCadastro_4.00=https://cad.sefazrs.rs.gov.br/ws/cadconsultacadastro/cadconsultacadastro4.asmx
+NfeConsultaCadastro_4.00=https://cad.svrs.rs.gov.br/ws/cadconsultacadastro/cadconsultacadastro4.asmx
 
 [NFe_RS_H]
 NfeInutilizacao_4.00=https://nfe-homologacao.sefazrs.rs.gov.br/ws/nfeinutilizacao/nfeinutilizacao4.asmx
@@ -244,7 +244,7 @@ NfeStatusServico_4.00=https://nfe-homologacao.sefazrs.rs.gov.br/ws/NfeStatusServ
 RecepcaoEvento_4.00=https://nfe-homologacao.sefazrs.rs.gov.br/ws/recepcaoevento/recepcaoevento4.asmx
 NFeAutorizacao_4.00=https://nfe-homologacao.sefazrs.rs.gov.br/ws/NfeAutorizacao/NFeAutorizacao4.asmx
 NFeRetAutorizacao_4.00=https://nfe-homologacao.sefazrs.rs.gov.br/ws/NfeRetAutorizacao/NFeRetAutorizacao4.asmx
-NfeConsultaCadastro_4.00=https://cad.sefazrs.rs.gov.br/ws/cadconsultacadastro/cadconsultacadastro4.asmx
+NfeConsultaCadastro_4.00=https://cad.svrs.rs.gov.br/ws/cadconsultacadastro/cadconsultacadastro4.asmx
 
 [NFe_RR_P]
 Usar=NFe_SVRS_P
