Atualizado WebService Ceara

--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -427,24 +427,12 @@ URL-QRCode=http://hnfe.sefaz.ba.gov.br/servicos/nfce/modulos/geral/NFCEC_consult
 URL-ConsultaNFCe=http://hinternet.sefaz.ba.gov.br/nfce/consulta
 
 [NFCe_CE_P]
-RecepcaoEvento_4.00=https://nfce.sefaz.ce.gov.br/nfce4/services/NFeRecepcaoEvento4?WSDL
-NfeInutilizacao_4.00=https://nfce.sefaz.ce.gov.br/nfce4/services/NFeInutilizacao4?WSDL
-NfeConsultaProtocolo_4.00=https://nfce.sefaz.ce.gov.br/nfce4/services/NFeConsultaProtocolo4?WSDL
-NfeStatusServico_4.00=https://nfce.sefaz.ce.gov.br/nfce4/services/NFeStatusServico4?WSDL
-NfeConsultaCadastro_4.00=https://nfce.sefaz.ce.gov.br/nfce4/services/CadConsultaCadastro4?WSDL
-NFeAutorizacao_4.00=https://nfce.sefaz.ce.gov.br/nfce4/services/NFeAutorizacao4?WSDL
-NFeRetAutorizacao_4.00=https://nfce.sefaz.ce.gov.br/nfce4/services/NFeRetAutorizacao4?WSDL
+Usar=NFCe_SVRS_P
 URL-QRCode=http://nfce.sefaz.ce.gov.br/pages/ShowNFCe.html
 URL-ConsultaNFCe=www.sefaz.ce.gov.br/nfce/consulta
 
 [NFCe_CE_H]
-RecepcaoEvento_4.00=https://nfceh.sefaz.ce.gov.br/nfce4/services/NFeRecepcaoEvento4?WSDL
-NfeInutilizacao_4.00=https://nfceh.sefaz.ce.gov.br/nfce4/services/NFeInutilizacao4?WSDL
-NfeConsultaProtocolo_4.00=https://nfceh.sefaz.ce.gov.br/nfce4/services/NFeConsultaProtocolo4?WSDL
-NfeStatusServico_4.00=https://nfceh.sefaz.ce.gov.br/nfce4/services/NFeStatusServico4?WSDL
-NfeConsultaCadastro_4.00=https://nfceh.sefaz.ce.gov.br/nfce4/services/CadConsultaCadastro4?WSDL
-NFeAutorizacao_4.00=https://nfceh.sefaz.ce.gov.br/nfce4/services/NFeAutorizacao4?WSDL
-NFeRetAutorizacao_4.00=https://nfceh.sefaz.ce.gov.br/nfce4/services/NFeRetAutorizacao4?WSDL
+Usar=NFCe_SVRS_H
 URL-QRCode=http://nfceh.sefaz.ce.gov.br/pages/ShowNFCe.html
 URL-ConsultaNFCe=www.sefaz.ce.gov.br/nfce/consulta
 
