Melhorias WebService Util

--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -648,6 +648,7 @@ NfeAutorizacao_4.00=https://nfce.sefazrs.rs.gov.br/ws/NfeAutorizacao/NFeAutoriza
 RecepcaoEvento_4.00=https://nfce.sefazrs.rs.gov.br/ws/recepcaoevento/recepcaoevento4.asmx
 NfeConsultaProtocolo_4.00=https://nfce.sefazrs.rs.gov.br/ws/NfeConsulta/NfeConsulta4.asmx
 NfeInutilizacao_4.00=https://nfce.sefazrs.rs.gov.br/ws/nfeinutilizacao/nfeinutilizacao4.asmx
+NFeRetAutorizacao_4.00=https://nfce.sefazrs.rs.gov.br/ws/NfeRetAutorizacao/NFeRetAutorizacao4.asmx
 URL-QRCode=https://www.sefaz.rs.gov.br/NFCE/NFCE-COM.aspx
 URL-ConsultaNFCe=www.sefaz.rs.gov.br/nfce/consulta
 
