Alterado urls Amazonas

--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -18,7 +18,7 @@ Usar=NFe_SVRS_P
 Usar=NFe_SVRS_H
 
 [NFe_AM_P]
-NfeConsultaCadastro_4.00=https://nfe.sefaz.am.gov.br/services2/services/cadconsultacadastro2
+NfeConsultaCadastro_4.00=https://nfe.sefaz.am.gov.br/services2/services/CadConsultaCadastro4
 NfeConsultaProtocolo_4.00=https://nfe.sefaz.am.gov.br/services2/services/NfeConsulta4
 NfeStatusServico_4.00=https://nfe.sefaz.am.gov.br/services2/services/NfeStatusServico4
 NfeInutilizacao_4.00=https://nfe.sefaz.am.gov.br/services2/services/NfeInutilizacao4
@@ -28,7 +28,7 @@ RecepcaoEvento_4.00=https://nfe.sefaz.am.gov.br/services2/services/RecepcaoEvent
 
 
 [NFe_AM_H]
-NfeConsultaCadastro_4.00=https://homnfe.sefaz.am.gov.br/services2/services/cadconsultacadastro2
+NfeConsultaCadastro_4.00=https://homnfe.sefaz.am.gov.br/services2/services/CadConsultaCadastro4
 NfeConsultaProtocolo_4.00=https://homnfe.sefaz.am.gov.br/services2/services/NfeConsulta4
 NfeStatusServico_4.00=https://homnfe.sefaz.am.gov.br/services2/services/NfeStatusServico4
 NfeInutilizacao_4.00=https://homnfe.sefaz.am.gov.br/services2/services/NfeInutilizacao4
@@ -464,7 +464,7 @@ NfeStatusServico_4.00=https://nfe.sefaz.go.gov.br/nfe/services/NFeStatusServico4
 NfeConsultaCadastro_4.00=https://nfe.sefaz.go.gov.br/nfe/services/CadConsultaCadastro4?wsdl
 NFeAutorizacao_4.00=https://nfe.sefaz.go.gov.br/nfe/services/NFeAutorizacao4?wsdl
 NFeRetAutorizacao_4.00=https://nfe.sefaz.go.gov.br/nfe/services/NFeRetAutorizacao4?wsdl
-URL-QRCode=http://nfe.sefaz.go.gov.br/nfeweb/sites/nfce/danfeNFCe
+URL-QRCode=https://nfeweb.sefaz.go.gov.br/nfeweb/sites/nfce/danfeNFCe
 URL-ConsultaNFCe=http://www.sefaz.go.gov.br/nfce/consulta
 
 [NFCe_GO_H]
