--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -475,7 +475,7 @@ NfeStatusServico_4.00=https://homolog.sefaz.go.gov.br/nfe/services/NFeStatusServ
 NfeConsultaCadastro_4.00=https://homolog.sefaz.go.gov.br/nfe/services/CadConsultaCadastro4?wsdl
 NFeAutorizacao_4.00=https://homolog.sefaz.go.gov.br/nfe/services/NFeAutorizacao4?wsdl
 NFeRetAutorizacao_4.00=https://homolog.sefaz.go.gov.br/nfe/services/NFeRetAutorizacao4?wsdl
-URL-QRCode=http://homolog.sefaz.go.gov.br/nfeweb/sites/nfce/danfeNFCe
+URL-QRCode=https://nfewebhomolog.sefaz.go.gov.br/nfeweb/sites/nfce/danfeNFCe
 URL-ConsultaNFCe=http://www.sefaz.go.gov.br/nfce/consulta
 
 [NFCe_MA_P]
