Alterado URLs ConsultaNFCe RN

--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -625,12 +625,12 @@ URL-ConsultaNFCe=www.fazenda.rj.gov.br/nfce/consulta
 [NFCe_RN_P]
 Usar=NFCe_SVRS_P
 URL-QRCode=http://nfce.set.rn.gov.br/consultarNFCe.aspx
-URL-ConsultaNFCe=www.set.rn.gov.br/nfce/consulta
+URL-ConsultaNFCe=https://nfce.set.rn.gov.br/portalDFE/NFCe/ConsultaNFCe.aspx
 
 [NFCe_RN_H]
 Usar=NFCe_SVRS_H
 URL-QRCode=http://hom.nfce.set.rn.gov.br/consultarNFCe.aspx
-URL-ConsultaNFCe=www.set.rn.gov.br/nfce/consulta
+URL-ConsultaNFCe=https://nfce.set.rn.gov.br/portalDFE/NFCe/ConsultaNFCe.aspx
 
 [NFCe_RO_P]
 Usar=NFCe_SVRS_P
