Adicionado consulta CFF de tributações classTrib

--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -742,3 +742,7 @@ NfeConsultaProtocolo_4.00=https://nfce-homologacao.svrs.rs.gov.br/ws/NfeConsulta
 NfeStatusServico_4.00=https://nfce-homologacao.svrs.rs.gov.br/ws/NfeStatusServico/NfeStatusServico4.asmx
 NFeAutorizacao_4.00=https://nfce-homologacao.svrs.rs.gov.br/ws/NfeAutorizacao/NFeAutorizacao4.asmx
 NFeRetAutorizacao_4.00=https://nfce-homologacao.svrs.rs.gov.br/ws/NfeRetAutorizacao/NFeRetAutorizacao4.asmx
+
+[CFF]
+# URL pública para consulta das classes tributárias (lista completa)
+classTrib = https://cff.svrs.rs.gov.br/api/v1/consultas/classTrib
